2A/05_Projet_GL/src/test/deca/context/valid/complet/78_method_call_float_int.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    void set(float f) {

    }
}

{
    A a ;
    a.set(1);
}