2A/05_Projet_GL/src/test/deca/context/invalid/complet/19_redf_equals_sig_diff.deca
// Description :
//    redefinition invalide de la méthode equals du Object 
// Resultats :
//    ligne 9 : une méthode rédefine doit avoir la même signature que la méthode héritée   
// Historique :
//  cree le 16/01/2024

class A {
    boolean equals() {
        
    }
}